--- a/sitewide.css
+++ b/sitewide.css
@@ -1,15 +1,16 @@
 /* Extra small devices (portrait phones, less than 576px)*/
 /*No media query for `xs` since this is the default in Bootstrap*/  
+/*anything under col-*/
 html {
     display: flex;
     justify-content: center;
-    max-height: 11in;
-    font-size: 11pt;
+    width: 8.5in;
+    height: 11in;
+    font-size: 9pt;
 }
 
 .container {
     background-color: white;
-    max-width: 8.5in;
 }
 
 html body {
@@ -39,21 +40,187 @@ html h3{
     border-top: hidden !important;
 }
 
-.bg-image {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment:fixed;
-    background-size: cover;
+/* Small devices (landscape phones, 576px and up)
+anything within col-sm-*/
+@media only screen (min-width:576px){
+    html {
+        display: flex;
+        justify-content: center;
+        max-height: 11in;
+        font-size: 11pt;
+    }
+    
+    .container {
+        background-color: white;
+        max-width: 8.5in;
+    }
+    
+    html body {
+        background-color: white;
+    }
+    
+    html section {
+        border-top: solid black 0.5px;
+        padding-top: 11pt;
+    }
+    
+    html h1 {
+        font-weight:bold;
+        font-size: 1.8em;
+    }
+    
+    html h2 {
+        font-style: italic;
+        font-size: 1.2em;
+    }
+    
+    html h3{
+        font-size: 1.1em;
+    }
+    
+    .contact_information {
+        border-top: hidden !important;
+    }
 }
 
-/* Small devices (landscape phones, 576px and up)*/
-@media (min-width: 576px) { }
+/* Medium devices (tablets, 768px and up)
+anything within col-md-*/
+@media only screen (min-width: 768px) {
+    html {
+        display: flex;
+        justify-content: center;
+        max-height: 11in;
+        font-size: 11pt;
+    }
+    
+    .container {
+        background-color: white;
+        max-width: 8.5in;
+    }
+    
+    html body {
+        background-color: white;
+    }
+    
+    html section {
+        border-top: solid black 0.5px;
+        padding-top: 11pt;
+    }
+    
+    html h1 {
+        font-weight:bold;
+        font-size: 1.8em;
+    }
+    
+    html h2 {
+        font-style: italic;
+        font-size: 1.2em;
+    }
+    
+    html h3{
+        font-size: 1.1em;
+    }
+    
+    .contact_information {
+        border-top: hidden !important;
+    }
+}
 
-/* Medium devices (tablets, 768px and up)*/
-@media (min-width: 768px) { }
+/* Large devices (desktops, 992px and up)
+anything within col-lg-*/
+@media only screen (min-width: 992px) {
+    html {
+        display: flex;
+        justify-content: center;
+        max-height: 11in;
+        font-size: 11pt;
+    }
+    
+    .container {
+        background-color: white;
+        max-width: 8.5in;
+    }
+    
+    html body {
+        background-color: white;
+    }
+    
+    html section {
+        border-top: solid black 0.5px;
+        padding-top: 11pt;
+    }
+    
+    html h1 {
+        font-weight:bold;
+        font-size: 1.8em;
+    }
+    
+    html h2 {
+        font-style: italic;
+        font-size: 1.2em;
+    }
+    
+    html h3{
+        font-size: 1.1em;
+    }
+    
+    .contact_information {
+        border-top: hidden !important;
+    }
+}
 
-/* Large devices (desktops, 992px and up)*/
-@media (min-width: 992px) { }
+/* Extra large devices (large desktops, 1200px and up)
+anything within col-xl-*/
+@media only screen (min-width: 1200px) {
+    html {
+        display: flex;
+        justify-content: center;
+        max-height: 11in;
+        font-size: 13pt;
+    }
+    
+    .container {
+        background-color: white;
+        max-width: 8.5in;
+    }
+    
+    html body {
+        background-color: white;
+    }
+    
+    html section {
+        border-top: solid black 0.5px;
+        padding-top: 11pt;
+    }
+    
+    html h1 {
+        font-weight:bold;
+        font-size: 1.8em;
+    }
+    
+    html h2 {
+        font-style: italic;
+        font-size: 1.2em;
+    }
+    
+    html h3{
+        font-size: 1.1em;
+    }
+    
+    .contact_information {
+        border-top: hidden !important;
+    }
+}
 
-/* Extra large devices (large desktops, 1200px and up)*/
-@media (min-width: 1200px) {}
+/*the layout just for printing*/
+@media only print {
+    html {
+        display: block;
+        font-size: 11pt;
+    }
+
+    body {
+      margin: 0;
+    }
+  
+  }
