--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ html {
     display: flex;
     justify-content: center;
     font-size: 9pt;
+    font-family: 'EB Garamond', serif;
 }
 
 .container {
@@ -44,55 +45,31 @@ html h3{
 }
 
 /* unvisited link */
-.contact a:link {
+a:link {
     color: black;
     text-decoration: none;
 }
 
 /* visited link */
-.contact a:visited {
+a:visited {
 color: black;
 text-decoration: none;
 }
 
 /* mouse over link */
-.contact a:hover {
-color: #7BAFD4;
+a:hover {
+color: #5d95de;
 text-decoration: none;
 }
 
 /* selected link */
-.contact a:active {
+a:active {
 color: black;
 text-decoration: none;
 }
 
 h1, h2, h3, li, p {
     cursor:default;
-}
-
-/* unvisited link */
-.saw a:link {
-    color: black;
-    text-decoration: none;
-}
-
-/* visited link */
-.saw a:visited {
-color: black;
-text-decoration: none;
-}
-
-/* mouse over link */
-.saw a:hover {
-color: #3E6394;
-text-decoration: none;
-}
-
-/* selected link */
-.saw a:active {
-color: black;
-text-decoration: none;
 }
 
 /* Small devices (landscape phones, 576px and up)
@@ -140,8 +117,6 @@ anything within col-sm-*/
 anything within col-md-*/
 @media only screen (min-width: 768px) {
     html {
-        display: flex;
-        justify-content: center;
         font-size: 11pt;
     }
     
@@ -266,6 +241,7 @@ anything within col-xl-*/
         font-size: 11pt;
         width: 8.5in;
         height: 11in;
+        color: black;
     }
   
   }
