--- a/experiences.css
+++ b/experiences.css
@@ -1,5 +1,5 @@
 html::-webkit-scrollbar {
-    width: 15px;
+    width: 10px;
     background: #313638;
 }
 
@@ -185,6 +185,10 @@ nav ul {
                     margin: 1vh 0 1vh 0;
                 }
 
+                    li {
+                        margin-bottom: 1em;
+                    }
+
         .image_and_link {
             display: flex;
             flex-flow: row wrap;
@@ -195,6 +199,10 @@ nav ul {
 
         #cssc_pic {
             background-color: white;
+        }
+
+        #kinesin {
+            height: 30vh;
         }
 
 @media screen and (min-width: 576px) {
@@ -249,6 +257,10 @@ nav ul {
                         font-size: 1.3rem;
                     }
     
+        #kinesin {
+            height: 50vh;
+        }
+
 }
 
 @media screen and (min-width: 992px) {
