--- a/printing.css
+++ b/printing.css
@@ -69,12 +69,6 @@
 
     body {
         cursor: default;
-        -webkit-user-select: none; /* Webkit */
-        -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* IE 10 */
-        /* Currently not supported in Opera but will be soon */
-        -o-user-select: none;
-        user-select: none;
         text-decoration: none;
     }
 
@@ -141,6 +135,16 @@
         #phone {
             color: gray;
             text-decoration: none;
+        }
+
+        #website_banner {
+            text-decoration: none;
+            margin-bottom: 1em;
+            margin-top: 1em;
+        }
+
+        #website_banner span {
+            color: blue;
         }
 
         /*-------Experience----------------*/
